@@ -11,7 +11,7 @@
 
 from pygments.style import Style
 from pygments.token import Keyword, Name, Comment, String, Error, \
-     Number, Operator, Generic
+     Number, Operator, Generic, Whitespace
 
 
 class BorlandStyle(Style):
@@ -22,6 +22,8 @@ class BorlandStyle(Style):
     default_style = ''
 
     styles = {
+        Whitespace:             '#bbbbbb',
+
         Comment:                'italic #008800',
         Comment.Preproc:        'noitalic',
         Comment.Special:        'noitalic bold',
