@@ -56,6 +56,7 @@ Token       = _TokenType()
 
 # Special token types
 Text        = Token.Text
+Whitespace  = Text.Whitespace
 Error       = Token.Error
 # Text that doesn't belong to this lexer (e.g. HTML in PHP)
 Other       = Token.Other
@@ -122,6 +123,7 @@ STANDARD_TYPES = {
     Token:                         '',
 
     Text:                          '',
+    Whitespace:                    'w',
     Error:                         'err',
     Other:                         'x',
 
